--- a/01-HTML-CSS/05-grid/אליה,עדו,ארתור/styletask5.css
+++ b/01-HTML-CSS/05-grid/אליה,עדו,ארתור/styletask5.css
@@ -8,9 +8,9 @@ a{
     text-decoration: none;
 }
 
-.main {
+.main,.artur-wrapper-body  {
     display: grid;
-    grid-template-rows: 12% 6% 12% 30%;
+    grid-template-rows: 10% 6% 12% 30%;
     width: 70%;
     margin: auto;
     margin-top: 15px;
@@ -95,20 +95,20 @@ li {
     margin: auto;
 }
 
-.one {
+.one, .container-artur-ad{
     background-color: rgb(175, 173, 173);
     display: flex;
     justify-items: center;
     height: 100%;
 }
 
-.two {
+.two,.container-artur-top-navbar {
     display: grid;
     grid-template-columns: repeat(1, 2fr 1fr);
 
 }
 
-.three {
+.three,.container-artur-bigpic {
     display: grid;
     grid-template-columns: 55% 25% 25%;
     grid-template-rows: repeat(8, 1fr);
@@ -286,9 +286,7 @@ h3>a {
 
 
 }
-.artur-wrapper-body{
-    width: 100%;
-}
+
 
 .logoa,
 .artur-logoa {
@@ -311,22 +309,27 @@ h3>a {
     
 }
 
-.artur-container-parent{
-    width: 100%;
-    height: 100%;
+
+
+
+.container-artur{
     display: grid;
-    grid-template-rows: repeat(30,25vh);
-    grid-template-columns: repeat(4,25vw);
+}
+
+
+  
+.container-artur-ad img{
+    padding: 20px;
+    margin: auto;
+}
+.artur-wrapper-body {
+    display: grid;
+    grid-template-rows: 20vh 20vh 20vh 20vh;
+}
+.container-artur-navbar ul{
+    display: flex;
+    justify-content: right;
+    box-shadow: none;
+    border: none;
 
 }
-.artur-container{
-    display: grid;
-
-}
-.artur-container1{
-    background-color: grey;
-    grid-column-start: 1;
-  grid-column-end: 5;
-  grid-row-start: 1;
-  grid-row-end: 2;
-}    
