BBC-WEBSITE - Copy

--- a/01-HTML-CSS/05-grid/MarinaYossiShani/BBC-WEBSITE - Copy/news.css
+++ b/01-HTML-CSS/05-grid/MarinaYossiShani/BBC-WEBSITE - Copy/news.css
@@ -63,7 +63,7 @@ a {
 }
 
 .sport:hover{
-    border-bottom: 4px solid  rgb(240, 225, 27);
+    border-bottom: 4px solid  #ffd230;
     cursor: pointer;
 }
 
