--- a/01-HTML-CSS/05-grid/Or&Michael&Lior/style.css
+++ b/01-HTML-CSS/05-grid/Or&Michael&Lior/style.css
@@ -27,6 +27,15 @@ body{
 .nav{
 
     border-right: 1px solid rgb(255, 247, 247);
+    text-decoration: none;
+    color: white;
+
+
+}
+
+.nav:hover{
+
+    cursor: pointer;
 
 }
 
@@ -159,15 +168,18 @@ text-decoration: underline;
     grid-gap: 1em;;
     color: white;
     grid-auto-flow: column;
+    height: 300px;
 }
 
 .homebox{
 
-    padding: 5px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    padding: 2px;
     border: 3px solid black;
     background-size: cover;
-
-
 
 }
 
@@ -175,6 +187,7 @@ text-decoration: underline;
 
     grid-row: 1/3;
     background-image: url(https://ichef.bbci.co.uk/live-experience/cps/624/cpsprodpb/vivo/live/images/2021/11/25/3157c030-c1e3-4afc-b825-93ad2d5d516c.jpg);
+    background-size: cover;
 
 }
 
@@ -198,12 +211,14 @@ text-decoration: underline;
 
 
     background-image: url(https://ychef.files.bbci.co.uk/1280x720/p0b576yw.webp);
+    background-size: cover;
     
 }
 
 .homebox5{
 
     background-image: url(https://ichef.bbci.co.uk/images/ic/832xn/p09ydv2w.jpg);
+    background-size: cover;
 }
 
 
@@ -214,7 +229,14 @@ text-decoration: underline;
 
 }
 
+.homebox1 h1{
+
+  font-size: 60px;
+
+}
+
 .homebox1 :nth-child(3){
+
 
     border-left: 5px solid red;
 
@@ -241,4 +263,9 @@ text-decoration: underline;
 
     border-left: 5px solid red;
 
+}
+
+.homecontainer p{
+
+    margin-block: 2px;
 }
