--- a/01-HTML-CSS/05-grid/Or&Michael&Lior/style.css
+++ b/01-HTML-CSS/05-grid/Or&Michael&Lior/style.css
@@ -4,6 +4,7 @@ body{
     flex-direction: column;
     align-items: center;
     font-family: 'outfit', sans-serif;
+
     
 }
 
@@ -180,7 +181,13 @@ text-decoration: underline;
     padding: 2px;
     border: 3px solid black;
     background-size: cover;
+    text-shadow: 0 0 3px #000000, 0 0 5px #000000;
+}
 
+.homebox :hover{
+
+    cursor: pointer;
+    
 }
 
 .homebox1{
