yael_grid_assignment

--- a/01-HTML-CSS/04-flex/yael/style.css
+++ b/01-HTML-CSS/04-flex/yael/style.css
@@ -5,10 +5,14 @@
     border:1px solid yellow;
     color: white;
     text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 .wrapper{
     background: gray;
     padding: 20px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+   /* justify-content:space-between;*/
+
 }
