--- a/01-HTML-CSS/05-grid/אליה,עדו,ארתור/styletask5.css
+++ b/01-HTML-CSS/05-grid/אליה,עדו,ארתור/styletask5.css
@@ -321,6 +321,7 @@ h3>a {
 .container-artur-ad img{
     padding: 20px;
     margin: auto;
+    width: 30%;
 }
 .artur-wrapper-body {
     display: grid;
