--- a/01-HTML-CSS/05-grid/MarinaYossiShani/bbc-home-copy/styleS.css
+++ b/01-HTML-CSS/05-grid/MarinaYossiShani/bbc-home-copy/styleS.css
@@ -33,6 +33,7 @@ body{
 .logo img {
     position: absolute;
     width: 80px;
+    
     height: auto;
     left: 293px;
     /*top: -1.9%;*/
@@ -130,8 +131,10 @@ p{
   }
 
 .big >img{
-    height:300px;
-    width:500px;
+    width: 100%;
+    /* height:300px; */
+    /* width:500px; */
+    height: auto;
 }
 
 .small >img{
