--- a/01-HTML-CSS/05-grid/MarinaYossiShani/bbc-home-copy/styleS.css
+++ b/01-HTML-CSS/05-grid/MarinaYossiShani/bbc-home-copy/styleS.css
@@ -138,8 +138,10 @@ p{
 }
 
 .small >img{
-    height:150px;
-    width:250px;
+    width: 100%;
+    height: auto;
+    /* height:150px;
+    width:250px; */
 }
 
 .small.topHome{
