--- a/01-HTML-CSS/05-grid/MarinaYossiShani/BBC-WEBSITE/sport.css
+++ b/01-HTML-CSS/05-grid/MarinaYossiShani/BBC-WEBSITE/sport.css
@@ -1,6 +1,8 @@
 body{
     min-width: 1900px;
+    margin: 0px;
 }
+
 .menu {
     display: grid;
     grid-template-columns: 25% 9% 10% 9% 10% 10% 10%;
