--- a/01-HTML-CSS/05-grid/GRID New BBC LOMM/gridBbc1.css
+++ b/01-HTML-CSS/05-grid/GRID New BBC LOMM/gridBbc1.css
@@ -1,27 +1,26 @@
 
 /*navBar*/
 
-.navBar{
-    background-color: #ffd230;
+.navBar, .navBar-News{
     grid-column: span 3; 
     height: 13vh;
     color:black;
     padding-left: 1vw;
 }
 
+.navBar{
+    background-color: #ffd230;
+}
+
 .navBar-News{
     background-color: #bb1919;
-    grid-column: span 3; 
-    height: 13vh;
-    color:black;
-    padding-left: 1vw;
 }
 
 .main-menu{
     display: flex;    
 }
 
-.navBar>h1{
+.navBar>h1, .navBar-News>h1{
     cursor: pointer;
     margin: 1vh;    
 }
@@ -89,7 +88,6 @@ a{
 }
 
 .box1{
-    border: 1px solid black;
     grid-row: span 2;
 }
 
@@ -97,7 +95,7 @@ a{
     color: yellow;
 }
 
-.box h1, p{
+.box h1, h2, p{
     position: relative;
     bottom: 20vh;
     left: 0.5vw;
