final_version_news_2

--- a/01-HTML-CSS/05-grid/Or&Michael&Lior/News_Lior.css
+++ b/01-HTML-CSS/05-grid/Or&Michael&Lior/News_Lior.css
@@ -149,10 +149,22 @@ body{
     position: relative;
     left: -10vw;
 }
+
+.secondletter
+{
+    position: relative;
+    left: -19vw;
+}
+
+.thridletter
+{
+    position: relative;
+    left: -21vw;   
+}
 .BBC_LOG_2
 {
     position: relative;
-    left: -450px;
+    left: -490px;
     top: 5px;
 }
 .banner
