--- a/01-HTML-CSS/05-grid/Or&Michael&Lior/style.css
+++ b/01-HTML-CSS/05-grid/Or&Michael&Lior/style.css
@@ -8,37 +8,6 @@ body{
     
 }
 
-.menuwrapper{
-
-    height: 6vh;
-    display: grid;
-    grid-template-columns: 1fr 2fr 2fr 2fr;
-    background-color: rgb(0, 0, 0);
-    text-align: center;
-    color: rgb(255, 255, 255);
-    font-family: 'Outfit', sans-serif;
-    padding: 5px;
-    align-items: center;
-    width: 90%;
-    font-weight: 600;
-
-}
-
-
-.nav{
-
-    border-right: 1px solid rgb(255, 247, 247);
-    text-decoration: none;
-    color: white;
-
-
-}
-
-.nav:hover{
-
-    cursor: pointer;
-
-}
 
 .sport-menu{
 
@@ -181,6 +150,7 @@ text-decoration: underline;
     padding: 2px;
     border: 3px solid black;
     background-size: cover;
+    text-align: start;
     text-shadow: 0 0 3px #000000, 0 0 5px #000000;
 }
 
@@ -275,4 +245,143 @@ text-decoration: underline;
 .homecontainer p{
 
     margin-block: 2px;
+}
+
+
+
+
+
+
+.BBC_logo
+{
+    left: -400px;
+    top: 10px;
+    position: relative;
+    display: flex;
+    text-align: center;
+    justify-content: flex-start;
+    width: 1vw;
+    margin-left: 0px;
+    height: 2vh;
+    background-color: rgb(247, 244, 244);
+    border: 3px solid black;
+    font-family: 'Outfit', sans-serif;
+}
+.firstletter
+{
+    position: relative;
+    left: -10vw;
+    top:5px
+}
+
+.secondletter
+{
+    position: relative;
+    left: -19vw;
+    top:5px
+
+}
+
+.thridletter
+{
+    position: relative;
+    left: -21vw;  
+    top:5px
+ 
+}
+.BBC_LOG_2
+{
+    position: relative;
+    left: -490px;
+    top: 2px;
+}
+.banner
+{
+    width: 100%;
+    height: 5vh;
+    background-color: rgb(10, 10, 10);
+    background-size: cover;
+    background-position: center;
+    text-align: center;
+    font-weight: 200;
+    top: -10px;
+    position: relative;
+    margin: 0px;
+}
+
+.navbar
+{
+   width: 85%;
+   margin: auto;
+   position: relative;
+   align-items: center; 
+   justify-content: space-between;
+   font-size: 10px;
+   top: 0px;
+}
+
+
+.navbar ul li
+{
+    list-style: none;
+    font-size: 10px;
+    display: inline-block;
+    margin: 0 50px;
+    position: relative;
+}
+
+.navbar ul li a
+{
+    text-decoration: none;
+    color:rgb(247, 245, 240);
+    font-weight: 200;
+    font-size: 2vh;
+    text-transform: uppercase;
+}
+
+.navbar ul li ::after
+{
+    content: '';
+    height: 5px;
+    width: 0;
+    background: rgb(255, 255, 255);
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    transition: 0.8s;
+}
+
+.navbar ul li:hover ::after
+{
+    width: 100%;
+}
+
+.search_box
+{
+    position: relative;
+    left: 80vw;
+    top: -1.02vh;
+    transform: translate(-50%,-50%);
+    transition: 10s;
+    background: rgb(10, 10, 10);
+    height: 30px;
+    width: 15vw;
+}
+
+.Search-btn
+{
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    background: rgb(250, 242, 242);
+    height: 40px;
+    width: 40px;
+    top: -0px;
+}
+
+.search_box:hover >.search_text
+{
+    width: 240px;
+    padding: 0 -5px;
 }
