--- a/01-HTML-CSS/05-grid/אליה,עדו,ארתור/styletask5.css
+++ b/01-HTML-CSS/05-grid/אליה,עדו,ארתור/styletask5.css
@@ -387,7 +387,9 @@ h3>a {
   font-weight: bold;
   background-color: burlywood;
 }
-
+.btn_signin:hover{
+    cursor: pointer;
+}
 .btn_signin{
   border-radius: 30px;
   width: 40%;
