--- a/01-HTML-CSS/05-grid/BBC-Tamir,Shay,Rasheed/style.css
+++ b/01-HTML-CSS/05-grid/BBC-Tamir,Shay,Rasheed/style.css
@@ -152,9 +152,10 @@ a:hover {
     right: 20px;
     width: 40%;
     height: 80%;
-    margin-left: 5px;
+    margin-left: -40px;
     margin-top: 3px;
     cursor: pointer;
+    padding: 20px;
     
     
 
@@ -164,9 +165,12 @@ a:hover {
 span:hover {
     text-decoration: underline;
 }
-.text>p {
+.text-p {
     width: 100%;
     height: 100%;
+    margin-left: 0px;
+    margin-top: 10px;
+    padding: 20px;
     
     
 }
@@ -174,14 +178,8 @@ span {
     font-size: x-large;
     align-content: center;
 }
-.textp {
-    padding: 0px;
-    margin-left: 45px;
-    margin-top: -10px;
-    width: 500px;
+
     
-    
-}
 .right {
     display: grid;
     grid-template-columns: 50vh 50vh;
