--- a/01-HTML-CSS/05-grid/אליה,עדו,ארתור/styletask5.css
+++ b/01-HTML-CSS/05-grid/אליה,עדו,ארתור/styletask5.css
@@ -402,7 +402,7 @@ h3>a {
   top:25px;
   left: 100px;
 }
-.btn:hover{
+.btn_signin:hover{
   cursor: pointer;
   background-color: black;
   color: darkgrey;
