--- a/01-HTML-CSS/05-grid/אליה,עדו,ארתור/styletask5.css
+++ b/01-HTML-CSS/05-grid/אליה,עדו,ארתור/styletask5.css
@@ -304,23 +304,29 @@ h3>a {
 
 .artur-logoa {
     background-image: url(photos/artur-logo.png);
-    height: 40px; 
+    height: 30px; 
 }
-.container-artur{
-    display: grid;
-} 
+
+
 .container-artur-ad img{
-    padding: 20px;
+    
     margin: auto;
     width: 30%;
 }
 .artur-wrapper-body {
     display: grid;
-    grid-template-rows:20% 10% 30% 30%;
+    grid-template-rows:20% 7% 30% 5% 38%;
     width: 95%;
     margin: auto;
     font-weight: 700;
-    gap: 70px;
+    gap: 94px;
+    margin-top: 20px;
+    font-family: 'Outfit', sans-serif;
+
+}
+.artur-topnav a{
+    font-weight: 500;
+    color: black;
 }
 .container-artur-navbar{
     height: 50px;
@@ -333,11 +339,16 @@ h3>a {
     width: 100%;
 
 }
+
 .container-artur-navbar li{
     box-shadow: none;
     border-bottom: solid 1px;
     border-color: black;
     
+}
+.container-artur-navbar a{
+    color: black;
+    font-weight: 700;
 }
 .artur-logo-bottom{
     height: 5vh;
@@ -351,15 +362,38 @@ h3>a {
 
 }
 .container-artur-bigpic{
-    background-image: url(https://ychef.files.bbci.co.uk/1665x965/p0b576yw.webp);
+    background-image: url(photos/Modern\ Minimalist\ Yellow\ Architecture\ Photo\ Presentation.png);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    opacity: 1;
 }
 .artur-logo-bottom ul{
     display: flex;
 } 
+.container-artur-grid-ad{
+    display: grid;
+    grid-template-columns:70% 30%;
+}
+.editor span{
+display: flex;
+align-items: center;
+justify-content: center;
+}
+.container-grid{
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: repeat(3,1fr);
 
+}
+
+
+
+
+.container-ad{
+    border-left: solid;
+}
+/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- */
 
 .signin,.signup{
     position: relative;
