--- a/01-HTML-CSS/05-grid/MarinaYossiShani/bbc-home/styleS.css
+++ b/01-HTML-CSS/05-grid/MarinaYossiShani/bbc-home/styleS.css
@@ -1,8 +1,9 @@
 body{
     font-family:sans-serif;
-    min-width:1900px;
+    /*min-width:1900px;*/
     margin:0px;
     margin-top:8px;
+
 }
 .menu {
     display: grid;
@@ -111,7 +112,7 @@ a {
 .content {
     padding-top:10px;
     display: grid;
-    grid-template-columns: 18% 35% 35% 15%;
+    grid-template-columns: 15% 35% 35% 15%;
     height: 31px;
     gap:5px;
 }
@@ -134,13 +135,13 @@ p{
   }
 
 .big >img{
-    height:300px;
-    width:500px;
+    height:auto;
+    width:100%;
 }
 
 .small >img{
-    height:150px;
-    width:250px;
+    height:auto;
+    width:100%;
 }
 
 .small.topHome{
@@ -148,7 +149,7 @@ p{
    grid-template-columns:1fr 1fr ;
    grid-template-rows:2;
    grid-row-gap:8px;
-   grid-column-gap:5px;
+   grid-column-gap:8px;
    
 }
 .big.topHome>h1 {
@@ -239,7 +240,7 @@ p.small.future{
     
 }
 
-.newsstrip{
+/*.newsstrip{
     display:grid;
     grid-template-columns: 25% 20% 46% 10%;
     background-color:rgb(255, 246, 246);
@@ -248,27 +249,20 @@ p.small.future{
 .newsstripred>h2{
     border-left: 5px solid red;
 }
-/*I couldnt get the news strip to be lower 
-like under my top content gird
-so i had to make up a space between it with nothing inside*/
-.randomspace{
-    width:1000px;
-    height:280px;
-}
 
 
 .thirdcontent.first>img{
-    width:300px;
-    height:200px;
+    width:100%;
+    height:auto;
 }
 
 .thirdcontent.second>img{
-    width:300px;
-    height:200px;
+    width:100%;
+    height:auto;
 }
 
 .thirdcontent.third>img{
-    width:300px;
+    width:100%;
     height:200px;
 }
 
@@ -294,6 +288,30 @@ so i had to make up a space between it with nothing inside*/
 }
 .sportstripred>h2{
     border-left: 5px solid rgb(255, 251, 0);
+}*/
+
+div{
+    border: 2px solid black;
 }
 
+/*I couldnt get the news strip to be lower 
+like under my top content gird
+so i had to make up a space between it with nothing inside*/
+.randomspace{
+    width:1000px;
+    height:280px;
+}
 
+ .News.strip{
+     display:grid;
+     grid-template-columns: 15% 35% 35% 15%;
+ }
+
+ .newscontent{
+     display:grid;
+     grid-template-columns:15% 23.3% 23.3% 23.3% 15%;
+ }
+ .news>img{
+     height:auto;
+     width:100%;
+ }
