--- a/01-HTML-CSS/05-grid/bbc-zoom/style.css
+++ b/01-HTML-CSS/05-grid/bbc-zoom/style.css
@@ -20,7 +20,7 @@
 .Container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  /*grid-template-rows: 1fr 1fr;*/
   border: 1px solid black;
   gap: 20px;
   padding: 10px;
@@ -75,4 +75,10 @@ li a:hover {
     margin-right: auto;
     width: 100%;
     height: 100%;
+}
+p{
+  align-items: center;
+  text-align: center;
+  padding: -5px;
+  transform: (-50px 50px);
 }
