--- a/01-HTML-CSS/06-BEM model/noa artur shimon/style.scss
+++ b/01-HTML-CSS/06-BEM model/noa artur shimon/style.scss
@@ -1,1 +1,29 @@
+.header {
+    background-color: rgb(247, 57, 89);
+    position: fixed;
+    width: 100%;
 
+    h1 {
+        background-color: pink;
+    }
+
+    span {
+        color: white;
+        font-weight: 700;
+        display: flex;
+        justify-content: end;
+    }
+    i{
+      padding-right: 5px; ; 
+    }
+}
+.navbar{
+    
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+
+}
+body {
+    margin: 0;
+}
