--- a/01-HTML-CSS/06-BEM model/Tal/style.css
+++ b/01-HTML-CSS/06-BEM model/Tal/style.css
@@ -2,7 +2,7 @@
     box-shadow: 3px 3px 9px rgba(0, 0, 0, 0.356);
     border-radius: 10px;
     padding: 10px;
-    width: fit-content;
+    width: fit-content;ל
 }
 
 .block__element {
