--- a/01-HTML-CSS/06-BEM model/Andrew&Eilya&michael/homeTask/style.scss
+++ b/01-HTML-CSS/06-BEM model/Andrew&Eilya&michael/homeTask/style.scss
@@ -1,3 +1,6 @@
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
 .ad--row{
     display: flex;
     justify-content: center;
@@ -12,14 +15,19 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    .home--main__article__big{
-        background-image: url(https://ichef.bbci.co.uk/news/976/cpsprodpb/909F/production/_121832073_sthafricagetty2.jpg);
+    color: white;
+    height: 50vh;
+    .home--main__article--big{
+        background-image: linear-gradient(0deg, rgb(0, 0, 0) 0%, rgba(255,255,255,0) 100%),
+        url(https://ichef.bbci.co.uk/news/976/cpsprodpb/909F/production/_121832073_sthafricagetty2.jpg);
         background-size: cover;
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
         grid-row: 1 / 3;
         grid-column: 1 / 3;
+        height: 50vh;
+        padding: 1rem;
     }
 }
 
