--- a/01-HTML-CSS/06-BEM model/yahya/Scss/style.css
+++ b/01-HTML-CSS/06-BEM model/yahya/Scss/style.css
@@ -21,8 +21,8 @@ ul {
   .topcontainar{
       display: grid;
       background-color: blanchedalmond;
-      grid-template-columns: repeat(3 1fr);
-      grid-template-rows: repeat(2 1fr);
+      grid-template-columns: repeat(3,1fr);
+      grid-template-rows: repeat(2,1fr);
       grid-row-gap: 20px;
       background-color:white;
       padding: 10px;
