--- a/01-HTML-CSS/06-BEM model/Andrew&Eilya&michael/homeTask/style.scss
+++ b/01-HTML-CSS/06-BEM model/Andrew&Eilya&michael/homeTask/style.scss
@@ -10,11 +10,13 @@ body{
 }
 .title{
     font-size: 1.2rem;
+    padding: 1rem 0 1rem 0;
 }
 .home--main{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
+    gap: 2rem;
     color: white;
     height: 50vh;
     .home--main__article--big{
@@ -29,9 +31,44 @@ body{
         height: 50vh;
         padding: 1rem;
     }
+    :nth-child(2):not(p){
+        background-image: linear-gradient(0deg, rgb(0, 0, 0) 0%, rgba(255,255,255,0) 100%),
+        url(https://ichef.bbci.co.uk/news/976/cpsprodpb/1964/production/_121800560_gettyimages-1212213050.jpg);
+    }
+    :nth-child(3):not(p){
+        background-image: linear-gradient(0deg, rgb(0, 0, 0) 0%, rgba(255,255,255,0) 100%),
+        url(https://ichef.bbci.co.uk/news/976/cpsprodpb/167C7/production/_121830129_hi072221422.jpg);
+    }
+    :nth-child(4):not(p){
+        background-image: linear-gradient(0deg, rgb(0, 0, 0) 0%, rgba(255,255,255,0) 100%),
+        url(https://ychef.files.bbci.co.uk/1280x720/p0b63llm.webp);
+    }
+    :nth-child(5):not(p){
+        background-image: linear-gradient(0deg, rgb(0, 0, 0) 0%, rgba(255,255,255,0) 100%),
+        url(https://ychef.files.bbci.co.uk/1280x720/p0b698hg.webp);
+    }
+    .home--main__article--small{
+        background-size: cover;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        padding: 1rem;
+        :last-child{
+            box-shadow: -0.2em 0 0 rgb(255, 0, 0);
+            padding-left: 0.2em;
+        }
+    }
 }
+.home--small{
+    .title{
+        box-shadow: -0.2em 0 0 rgb(255, 0, 0);
+        margine-left: 0.2em;        
+    }
+}
+.home--small__row{
+    display:flex
 
-
+}
 
 
 
