--- a/01-HTML-CSS/06-BEM model/Andrew&Eilya&michael/homeTask/style.scss
+++ b/01-HTML-CSS/06-BEM model/Andrew&Eilya&michael/homeTask/style.scss
@@ -1,6 +1,7 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
 }
+
 .ad--row{
     display: flex;
     justify-content: center;
@@ -8,10 +9,12 @@ body{
         width: 75vw;
     }
 }
+
 .title{
     font-size: 1.2rem;
     padding: 1rem 0 1rem 0;
 }
+
 .home--main{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -59,14 +62,26 @@ body{
         }
     }
 }
+
 .home--small{
     .title{
         box-shadow: -0.2em 0 0 rgb(255, 0, 0);
         margine-left: 0.2em;        
     }
 }
+
 .home--small__row{
-    display:flex
+    display: flex;
+
+    .home--small__row_article{
+                display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        img{
+            height: 15vh;
+            
+        }
+    }
 
 }
 
