--- a/01-HTML-CSS/06-BEM model/Andrew&Eilya&michael/homeTask/style.scss
+++ b/01-HTML-CSS/06-BEM model/Andrew&Eilya&michael/homeTask/style.scss
@@ -33,6 +33,10 @@ body{
         grid-column: 1 / 3;
         height: 50vh;
         padding: 1rem;
+        :last-child{
+            box-shadow: -0.2em 0 0 yellow;
+            padding-left: 0.2em;
+        }
     }
     :nth-child(2):not(p){
         background-image: linear-gradient(0deg, rgb(0, 0, 0) 0%, rgba(255,255,255,0) 100%),
@@ -63,6 +67,11 @@ body{
     }
 }
 
+.flex{
+    display: flex;
+    align-items: center;
+}
+
 .home--small{
     .title{
         box-shadow: -0.2em 0 0 rgb(255, 0, 0);
@@ -77,14 +86,17 @@ body{
                 display: flex;
         flex-direction: column;
         justify-content: space-between;
+        width: 25vw;
         img{
             height: 15vh;
             
         }
     }
-
 }
 
+.ad--column{
+    height: 30vh;
+}
 
 
 // end Andew's work
