--- a/01-HTML-CSS/06-BEM model/Andrew&Eilya&michael/homeTask/style.scss
+++ b/01-HTML-CSS/06-BEM model/Andrew&Eilya&michael/homeTask/style.scss
@@ -12,7 +12,7 @@ body{
 
 .title{
     font-size: 1.2rem;
-    padding: 1rem 0 1rem 0;
+    margin: 1rem 0 1rem 0;
 }
 
 .home--main{
@@ -34,7 +34,7 @@ body{
         height: 50vh;
         padding: 1rem;
         :last-child{
-            box-shadow: -0.2em 0 0 yellow;
+            box-shadow: -0.2em 0 0 green;
             padding-left: 0.2em;
         }
     }
