--- a/01-HTML-CSS/06-BEM model/Andrew&Eilya&michael/homeTask/style.scss
+++ b/01-HTML-CSS/06-BEM model/Andrew&Eilya&michael/homeTask/style.scss
@@ -22,6 +22,7 @@ body{
     gap: 2rem;
     color: white;
     height: 50vh;
+    margin: 1rem;
     .home--main__article--big{
         background-image: linear-gradient(0deg, rgb(0, 0, 0) 0%, rgba(255,255,255,0) 100%),
         url(https://ichef.bbci.co.uk/news/976/cpsprodpb/909F/production/_121832073_sthafricagetty2.jpg);
@@ -34,7 +35,7 @@ body{
         height: 50vh;
         padding: 1rem;
         :last-child{
-            box-shadow: -0.2em 0 0 green;
+            box-shadow: -0.2em 0 0 yellow;
             padding-left: 0.2em;
         }
     }
@@ -97,12 +98,9 @@ body{
         :last-child{
             box-shadow: -0.2em 0 0 blue;
             padding-left: 0.2em;
+        }
     }
 }
-
 .ad--column{
     height: 30vh;
 }
-
-
-// end Andew's work
