--- a/01-HTML-CSS/06-BEM model/michael,marina,rasheed/style.scss
+++ b/01-HTML-CSS/06-BEM model/michael,marina,rasheed/style.scss
@@ -1,8 +1,6 @@
 
- body{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+body{
+
         font-family: 'outfit', sans-serif;
 
  }
@@ -10,23 +8,68 @@
 .navbar{
 
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    height: 5vh;
-    border: 3px solid grey;
     background-color: black;
-    color: white;
-
-    &--div{
-        max-height: 200px;
-    }
-    &--.bbclogo{
-
-        height: 20px;
-
-
-    }
-
-
+    height: 8vh;
+    width: 100%;
 
 }
+    
+.pages{
+
+    display: flex;
+    justify-content: center;
+
+    a{
+
+        text-decoration: none;
+        color: white;
+        font-size: 30px;
+        font-weight: 300px;
+        margin-inline: 6px;
+
+    }
+
+    .navbox{
+        
+        border-left: 2px solid white;
+        display: flex;
+        justify-content: center;
+
+    }
+
+    
+    .home:hover{
+
+        border-bottom: 4px solid rgb(208, 45, 45);
+
+    }
+
+    .news:hover{
+
+        border-bottom: 4px solid rgb(67, 67, 232);
+    }
+
+    .sport:hover{
+
+        border-bottom: 4px solid rgb(168, 191, 51);
+    }
+
+
+    
+
+        
+}
+
+.bbclogo{
+
+        align-self: flex-start;
+        height: 7vh;
+        width: 100%;
+
+}
+
+
+
+    
