--- a/01-HTML-CSS/06-BEM model/michael,marina,rasheed/style.scss
+++ b/01-HTML-CSS/06-BEM model/michael,marina,rasheed/style.scss
@@ -39,7 +39,11 @@ body{
 
     }
 
-    
+    .signin:hover{
+
+        cursor: pointer;
+        
+    }
     .home:hover{
 
         border-bottom: 4px solid rgb(208, 45, 45);
