--- a/01-HTML-CSS/06-BEM model/michael,marina,rasheed/style.scss
+++ b/01-HTML-CSS/06-BEM model/michael,marina,rasheed/style.scss
@@ -7,7 +7,7 @@ body{
         align-items: center;
         flex-direction: column;
 
- }
+}
 
 .navbar{
 
@@ -18,77 +18,81 @@ body{
     height: 8vh;
     width: 100%;
     flex-shrink: 0;
-
-}
     
-.bbclogo{
-
-    display: flex;
-    justify-content: center;
-    flex-shrink: 0;
-    height: 7vh;
-    width: 100%;
-
-}
-
-.pages{
-
-    display: flex;
-    justify-content: center;
-
-    a{
+    .bbclogo{
 
         display: flex;
         justify-content: center;
-        text-decoration: none;
-        color: white;
-        font-size: 25px;
-        font-weight: 300px;
-        margin-inline-end: 15px;
-        width: 200px;
+        flex-shrink: 0;
+        height: 7vh;
+        min-width: fit-content;
 
     }
 
-    .navbox{
+    .pages{
+
+        display: flex;
+        justify-content: center;
+
+        a{
+
+            display: flex;
+            justify-content: center;
+            text-decoration: none;
+            color: white;
+            font-size: 25px;
+            font-weight: 300px;
+            margin-inline-end: 15px;
+            width: 200px;
+
+        }
+
+        .navbox{
+            
+            border-left: 2px solid white;
+
+        }
+
+        .signin:hover{
+
+            cursor: pointer;
+            border-bottom: 4px solid rgb(135, 61, 9);
+
+        }
+        .home:hover{
+
+            border-bottom: 4px solid rgb(208, 45, 45);
+
+        }
+
+        .news:hover{
+
+            border-bottom: 4px solid rgb(67, 67, 232);
+        }
+
+        .sport:hover{
+
+            border-bottom: 4px solid rgb(168, 191, 51);
+        }
         
-        border-left: 2px solid white;
-
     }
 
-    .signin:hover{
+    .searchbox{
 
-        cursor: pointer;
-        border-bottom: 4px solid rgb(135, 61, 9);
-
-    }
-    .home:hover{
-
-        border-bottom: 4px solid rgb(208, 45, 45);
+        margin-left: 20px;
+        display: flex;
+        justify-content: center;
 
     }
-
-    .news:hover{
-
-        border-bottom: 4px solid rgb(67, 67, 232);
-    }
-
-    .sport:hover{
-
-        border-bottom: 4px solid rgb(168, 191, 51);
-    }
-
- .searchbox{
-
-    display: flex;
-    justify-content: center;
-
- }
 
 }
 
- .topbar{
 
-    width: 90%;
+
+.topbar{
+
+    width: 75%;
+    height: 50px;
     display: flex;
     justify-content: space-between;
 
@@ -105,7 +109,7 @@ body{
 
     padding: 5px;
     margin-top: 30px;
-    width: 90%;
+    width: 75%;
     display: grid;
     grid-template-columns: 2fr repeat(3,1fr);
     grid-template-rows: 2fr 1fr;
@@ -114,118 +118,129 @@ body{
     grid-gap: 1em;;
     color: white;
     grid-auto-flow: column;
-    height: 300px;
-}
+    height: 450px;
 
-.homebox{
+ }
 
 
-    display: flex;
-    flex-direction: column;
-    justify-content: end;
-    padding: 10px;
-    background-size: cover;
-    text-align: start;
-    text-shadow: 0 0 3px #000000, 0 0 5px #000000;
+    .homebox{
+
+        display: flex;
+        flex-direction: column;
+        justify-content: end;
+        padding: 10px;
+        background-size: cover;
+        text-align: start;
+        text-shadow: 0 0 3px #000000, 0 0 5px #000000;
+
+    }
+
+        .homebox p {
+
+            margin: 5px;
+        }
+
+        .homebox :hover{
+
+            cursor: pointer;
+        
+        }
+
+        .homebox1{
+
+            grid-row: 1/3;
+            background-image: url(https://ichef.bbci.co.uk/live-experience/cps/624/cpsprodpb/vivo/live/images/2021/11/25/3157c030-c1e3-4afc-b825-93ad2d5d516c.jpg);
+            background-size: cover;
+
+        }
+
+        .homebox2{
+            
+
+
+            background-image: url(https://ichef.bbci.co.uk/news/976/cpsprodpb/58DC/production/_121784722_migrants4.jpg);
+            background-size: cover;
+
+        }
+
+        .homebox3{
+
+            background-image: url(https://ichef.bbci.co.uk/live-experience/cps/624/cpsprodpb/vivo/live/images/2021/11/24/f1cc5ab7-b958-4a01-8696-4a292bc8fcbd.jpg);
+            background-size: cover;
+
+        }
+
+        .homebox4{
+
+
+            background-image: url(https://ychef.files.bbci.co.uk/1280x720/p0b576yw.webp);
+            background-size: cover;
+            
+        }
+
+        .homebox5{
+
+            background-image: url(https://ichef.bbci.co.uk/images/ic/832xn/p09ydv2w.jpg);
+            background-size: cover;
+        }
+
+
+        .homebox :nth-child(1){
+
+            font-size: 20px;
+            font-weight: 700;
+
+        }
+
+        .homebox1 h1{
+
+        font-size: 60px;
+
+        }
+
+        .homebox1 :nth-child(3){
+
+
+            border-left: 5px solid red;
+
+        }
+
+        .homebox2 :nth-child(2){
+
+            border-left: 5px solid red;
+        }
+
+        .homebox3 :nth-child(2){
+
+            border-left: 5px solid red;
+
+        }
+
+        .homebox4 :nth-child(2){
+
+            border-left: 5px solid red;
+
+        }
+
+        .homebox5 :nth-child(2){
+
+            border-left: 5px solid red;
+
+        }
+
+        .homecontainer p{
+
+            margin-block: 2px;
+
+        }
+  
     
-}
+    .middlebar{
 
-.homebox :hover{
-
-    cursor: pointer;
-    
-}
-
-.homebox1{
-
-    grid-row: 1/3;
-    background-image: url(https://ichef.bbci.co.uk/live-experience/cps/624/cpsprodpb/vivo/live/images/2021/11/25/3157c030-c1e3-4afc-b825-93ad2d5d516c.jpg);
-    background-size: cover;
-
-}
-
-.homebox2{
-    
-
-
-    background-image: url(https://ichef.bbci.co.uk/news/976/cpsprodpb/58DC/production/_121784722_migrants4.jpg);
-    background-size: cover;
-
-}
-
-.homebox3{
-
-    background-image: url(https://ichef.bbci.co.uk/live-experience/cps/624/cpsprodpb/vivo/live/images/2021/11/24/f1cc5ab7-b958-4a01-8696-4a292bc8fcbd.jpg);
-    background-size: cover;
-
-}
-
-.homebox4{
-
-
-    background-image: url(https://ychef.files.bbci.co.uk/1280x720/p0b576yw.webp);
-    background-size: cover;
-    
-}
-
-.homebox5{
-
-    background-image: url(https://ichef.bbci.co.uk/images/ic/832xn/p09ydv2w.jpg);
-    background-size: cover;
-}
-
-
-.homebox :nth-child(1){
-
-    font-size: 20px;
-    font-weight: 700;
-
-}
-
-.homebox1 h1{
-
-  font-size: 60px;
-
-}
-
-.homebox1 :nth-child(3){
-
-
-    border-left: 5px solid red;
-
-}
-
-.homebox2 :nth-child(2){
-
-    border-left: 5px solid red;
-}
-
-.homebox3 :nth-child(2){
-
-    border-left: 5px solid red;
-
-}
-
-.homebox4 :nth-child(2){
-
-    border-left: 5px solid red;
-
-}
-
-.homebox5 :nth-child(2){
-
-    border-left: 5px solid red;
-
-}
-
-.homecontainer p{
-
-    margin-block: 2px;
-}
-
-
-
-
+        display: flex;
+        justify-content: start;
+        
+    }
 
 
 
