--- a/01-HTML-CSS/06-BEM model/michael,marina,rasheed/style.scss
+++ b/01-HTML-CSS/06-BEM model/michael,marina,rasheed/style.scss
@@ -1,15 +1,17 @@
+body {
 
-body{
-
-        font-family: 'outfit', sans-serif;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
+    font-family: 'outfit', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: rgb(252, 252, 252);
 
 }
 
-.navbar{
+// **** NAVBAR ****
+
+.navbar {
 
     display: flex;
     justify-content: center;
@@ -18,23 +20,24 @@ body{
     height: 8vh;
     width: 100%;
     flex-shrink: 0;
-    
-    .bbclogo{
+
+    .bbclogo {
 
         display: flex;
         justify-content: center;
         flex-shrink: 0;
-        height: 7vh;
+        height: 5vh;
         min-width: fit-content;
+        margin-right: 10px;
 
     }
 
-    .pages{
+    .pages {
 
         display: flex;
         justify-content: center;
 
-        a{
+        a {
 
             display: flex;
             justify-content: center;
@@ -47,37 +50,42 @@ body{
 
         }
 
-        .navbox{
-            
-            border-left: 2px solid white;
+        .navbox {
+
+            display: flex;
+            align-items: center;
+            border-left: 4px solid white;
+            border-bottom: 4px solid black;
+            height: 7vh;
 
         }
 
-        .signin:hover{
+        .signin:hover {
 
             cursor: pointer;
             border-bottom: 4px solid rgb(135, 61, 9);
 
         }
-        .home:hover{
+
+        .home:hover {
 
             border-bottom: 4px solid rgb(208, 45, 45);
 
         }
 
-        .news:hover{
+        .news:hover {
 
             border-bottom: 4px solid rgb(67, 67, 232);
         }
 
-        .sport:hover{
+        .sport:hover {
 
             border-bottom: 4px solid rgb(168, 191, 51);
         }
-        
+
     }
 
-    .searchbox{
+    .searchbox {
 
         margin-left: 20px;
         display: flex;
@@ -87,209 +95,231 @@ body{
 
 }
 
+// **** TOP BAR ****
 
-
-.topbar{
+.topbar {
 
     width: 75%;
     height: 50px;
     display: flex;
     justify-content: space-between;
 
-    .date{
+    .date {
 
         color: rgb(154, 152, 152);
     }
 
- }
+}
 
+// **** HOME CONTAINER ****
 
-
- .homecontainer{
+.homecontainer {
 
     padding: 5px;
     margin-top: 30px;
     width: 75%;
     display: grid;
-    grid-template-columns: 2fr repeat(3,1fr);
-    grid-template-rows: 2fr 1fr;
     grid-template-columns: 2fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
-    grid-gap: 1em;;
+    grid-gap: 1em;
     color: white;
     grid-auto-flow: column;
     height: 450px;
 
- }
+}
 
 
-    .homebox{
+.homebox {
 
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    padding: 10px;
+    background: radial-gradient(white,grey);
+    background-size: cover;
+    text-align: start;
+    text-shadow: 0 0 3px #000000, 0 0 5px #000000;
+
+}
+
+.homebox p {
+    margin: 5px;
+}
+
+.homebox:hover{
+
+    cursor: pointer;
+    opacity: 0.8;
+    transition: 0.8s;
+
+}
+
+.homebox1 {
+
+    grid-row: 1/3;
+    background-image: url(https://ichef.bbci.co.uk/live-experience/cps/624/cpsprodpb/vivo/live/images/2021/11/25/3157c030-c1e3-4afc-b825-93ad2d5d516c.jpg);
+    background-size: cover;
+
+}
+
+.homebox2 {
+
+
+
+    background-image: url(https://ichef.bbci.co.uk/news/976/cpsprodpb/58DC/production/_121784722_migrants4.jpg);
+    background-size: cover;
+
+}
+
+.homebox3 {
+
+    background-image: url(https://ichef.bbci.co.uk/live-experience/cps/624/cpsprodpb/vivo/live/images/2021/11/24/f1cc5ab7-b958-4a01-8696-4a292bc8fcbd.jpg);
+    background-size: cover;
+
+}
+
+.homebox4 {
+
+
+    background-image: url(https://ychef.files.bbci.co.uk/1280x720/p0b576yw.webp);
+    background-size: cover;
+
+}
+
+.homebox5 {
+
+    background-image: url(https://ichef.bbci.co.uk/images/ic/832xn/p09ydv2w.jpg);
+    background-size: cover;
+}
+
+
+.homebox :nth-child(1) {
+
+    font-size: 20px;
+    font-weight: 700;
+
+}
+
+.homebox1 h1 {
+
+    font-size: 60px;
+
+}
+
+.homebox1 :nth-child(3) {
+
+
+    border-left: 5px solid red;
+
+}
+
+.homebox2 :nth-child(2) {
+
+    border-left: 5px solid red;
+}
+
+.homebox3 :nth-child(2) {
+
+    border-left: 5px solid red;
+
+}
+
+.homebox4 :nth-child(2) {
+
+    border-left: 5px solid red;
+
+}
+
+.homebox5 :nth-child(2) {
+
+    border-left: 5px solid red;
+
+}
+
+// **** MIDDLE BAR ****
+
+.middlebar {
+
+    display: flex;
+    justify-content: start;
+    width: 75%;
+
+
+    >h1 {
+
+    border-left: 6px solid red;
+    width: 100px;
+    display: flex;
+    justify-content: center;
+
+    }
+
+}
+
+
+// **** HOME NEWS CONTAINER ****
+
+.homenews {
+
+    display: flex;
+    justify-content: space-between;
+    width: 75%;
+
+}
+
+.newsbox {
+
+    display: flex;
+    flex-direction: column;
+    max-width: 32%;
+    height: 450px;
+
+    h1{
+        font-size: 27px;
+    }
+
+    h1:hover{
+        cursor: pointer;
+        text-decoration: underline;
+    }
+
+    .category{
+
+        border-left: 4px solid red;
+        padding-left: 10px;
+        color: rgb(98, 94, 90);
+
+    }
+
+}
+
+.newsboximg{
+
+    background: radial-gradient(white, gray);
+
+    img{
+    
+        width: 100%;
+        height: 100%;
+
+    }
+
+    img:hover{
+
+        transition: 0.8s;
+        cursor: pointer;
+        opacity: 0.8;
+    }
+    
+}
+
+
+.newsboxtext {
+
+        height: 50%;
         display: flex;
         flex-direction: column;
-        justify-content: end;
-        padding: 10px;
-        background-size: cover;
-        text-align: start;
-        text-shadow: 0 0 3px #000000, 0 0 5px #000000;
-
+        align-items: flex-start;
+        justify-content: space-between;
     }
 
-        .homebox p {
-
-            margin: 5px;
-        }
-
-        .homebox :hover{
-
-            cursor: pointer;
-        
-        }
-
-        .homebox1{
-
-            grid-row: 1/3;
-            background-image: url(https://ichef.bbci.co.uk/live-experience/cps/624/cpsprodpb/vivo/live/images/2021/11/25/3157c030-c1e3-4afc-b825-93ad2d5d516c.jpg);
-            background-size: cover;
-
-        }
-
-        .homebox2{
-            
-
-
-            background-image: url(https://ichef.bbci.co.uk/news/976/cpsprodpb/58DC/production/_121784722_migrants4.jpg);
-            background-size: cover;
-
-        }
-
-        .homebox3{
-
-            background-image: url(https://ichef.bbci.co.uk/live-experience/cps/624/cpsprodpb/vivo/live/images/2021/11/24/f1cc5ab7-b958-4a01-8696-4a292bc8fcbd.jpg);
-            background-size: cover;
-
-        }
-
-        .homebox4{
-
-
-            background-image: url(https://ychef.files.bbci.co.uk/1280x720/p0b576yw.webp);
-            background-size: cover;
-            
-        }
-
-        .homebox5{
-
-            background-image: url(https://ichef.bbci.co.uk/images/ic/832xn/p09ydv2w.jpg);
-            background-size: cover;
-        }
-
-
-        .homebox :nth-child(1){
-
-            font-size: 20px;
-            font-weight: 700;
-
-        }
-
-        .homebox1 h1{
-
-        font-size: 60px;
-
-        }
-
-        .homebox1 :nth-child(3){
-
-
-            border-left: 5px solid red;
-
-        }
-
-        .homebox2 :nth-child(2){
-
-            border-left: 5px solid red;
-        }
-
-        .homebox3 :nth-child(2){
-
-            border-left: 5px solid red;
-
-        }
-
-        .homebox4 :nth-child(2){
-
-            border-left: 5px solid red;
-
-        }
-
-        .homebox5 :nth-child(2){
-
-            border-left: 5px solid red;
-
-        }
-
-    
-    .middlebar{
-
-        display: flex;
-        justify-content: start;
-        width: 75%;
-        
-    }
-
-        .middlebar>h1{
-
-            border-left: 6px solid red;
-            width: 100px;
-            display: flex;
-            justify-content: center;
-
-        }
-
-    .homenews{
-
-            display: flex;
-            justify-content: center;
-            width: 75%;
-    
-    }
-
-        .newsbox{
-
-            border: 2px solid grey;
-            width: 33%;
-            height: 450px;
-            margin: 1em;
-            
-        }
-
-
-        .newsboximg{
-
-            width: 100%;
-
-        }
-
-        .newsboxtext{
-
-            display: flex;
-            flex-direction: column;
-            justify-content: end;
-            
-        }
-
-        .newsbox p{
-
-            margin: 5px;
-        }
-
-        .newsbox h1{
-
-            font-size: 30px;
-            margin: 5px;
-
-        }
-
-
-
-    
