--- a/01-HTML-CSS/06-BEM model/T,Y,R/style.scss
+++ b/01-HTML-CSS/06-BEM model/T,Y,R/style.scss
@@ -1,10 +1,11 @@
 .maincontent{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows:  1fr;
-    height: 40vh;
+    display:grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    height: 50vh;
     width: 80vw;
     border:  solid black;
+    
  }
+
  
-  
