--- a/01-HTML-CSS/06-BEM model/John Etan & Yoel/style.scss
+++ b/01-HTML-CSS/06-BEM model/John Etan & Yoel/style.scss
@@ -1,3 +1,6 @@
+body{
+    background-color: rgb(88, 42, 42);
+}
 .header{
     background-color: black;
     width: 100%;
@@ -22,7 +25,8 @@
     
     &--item{
         margin-right: 2vw;
-        height: 1vh;
+        height: 2vh;
+        font-size: 2.5vh;
         display: flex;
         color: white;
     
@@ -31,17 +35,22 @@
         cursor: pointer;
     }
     }
-body{
-    background-color: rgb(88, 42, 42);
-}
-
 
 .socialmedia{
+    
         position: absolute;
-        right: 20px;
-        top: 300px;
-    &__item{
-        height: 5px;
-        width: 5px;
+        display: grid;
+        grid-template-rows: 1fr,1fr,1fr,1fr;
+        top: 30vh;
+        right: 10vw;
+        background-color: transparent;
+    &--item{
+        color: white;
+        height: 2vh;
+        width: 2vw;
+        img{
+            height: 4vh;
+            width: 3vw;
+        }
     }
     }
