--- a/01-HTML-CSS/06-BEM model/Andrew Eliya Michael/style.scss
+++ b/01-HTML-CSS/06-BEM model/Andrew Eliya Michael/style.scss
@@ -104,3 +104,10 @@ body{
 .ad--column{
     height: 30vh;
 }
+
+.navBar--news{
+    width: 100%;
+    background-color: red;
+    height: 40px;
+
+}
