--- a/01-HTML-CSS/06-BEM model/Andrew Eliya Michael/style.css
+++ b/01-HTML-CSS/06-BEM model/Andrew Eliya Michael/style.css
@@ -158,3 +158,46 @@ body {
   height: 30vh;
 }
 /*# sourceMappingURL=style.css.map */
+
+.navBar--news{
+  width: 100%;
+  background-color: red;
+  height: 100px;
+}
+.navBar--news>h2{color: white;}
+.nottitle{display: flex;
+flex-direction: row;
+justify-content: space-between ;
+}
+
+.ad--row2{
+  display: flex;
+flex-direction: row;
+}
+
+.news--main{width: 100vw;
+height: 14vw;
+background-color: rgb(110, 151, 147);
+display: grid;
+grid-template-columns: 2fr 1fr;
+grid-template-rows: 1fr;}
+
+.pic>img{width:35vw;
+height: 35vh
+;}
+.pic{display: grid;
+grid-template-columns: 1fr 1fr;
+grid-template-rows: 1fr;}
+
+.pic>p{position: relative;
+bottom:25vh ;
+left: 35vw;}
+.news--small{
+  margin-top: 3vh; 
+  display: flex;
+justify-content: space-between;
+margin-right: 15vw;}
+
+
+
+
